--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </header><!-- End Header -->
 
   <!-- ======= About Section ======= -->
- <!-- <section id="about" class="about">
+   <section id="about" class="about">
 
     <!-- ======= About Me ======= -->
     <div class="about-me container">
@@ -384,7 +384,7 @@
       </div>
 
     </div>
-  </section> --> <!-- End Resume Section -->
+  </section> <!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
