--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">        GST         </a></h4>
+            <h4><a href="">________GST______</a></h4>
           </div>
         </div>
 
