--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="">Pan Card and Tan Card</a></h4>
+            <p> PAN is manadate for financial transactions and income tax, <br> TAN is manadate for duduct and collect tax </p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">       MSME         </a></h4>
+            <h4><a href="">       MSME Registration         </a></h4>
+            <p> MSME registration is a mandatory process for any business to legally start and operate in India </p>
           </div>
         </div>
 
