--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">        DSC         </a></h4>
+            <h4><a href=""> DSC </a></h4>
+            <p> Digital Signature Certificate are digital equivalent of physical or paper certificates </p>
           </div>
         </div>
         
@@ -125,12 +126,14 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
             <h4><a href="">Income Tax</a></h4>
+            <p>  Offer various tax consulting services to individuals and businesses </p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
             <h4><a href="">TDS and TCS</a></h4>
+            <p> Tax deducted at source (TDS) <br> Tax collected at source </p>
           </div>
         </div>
         
