--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
             <h4><a href="">TDS and TCS</a></h4>
-            <p> Tax deducted at source (TDS) <br> Tax collected at source </p>
+            <p> Tax deducted at source (TDS), Tax collected at source (TCS) </p>
           </div>
         </div>
         
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">ESI and PF</a></h4>
+            <h4><a href="">the Employees Provident Fund (EPF) <br> Employees state insurance (ESI)</a></h4>
           </div>
         </div>
         
