--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">the Employees Provident Fund (EPF) <br> Employees state insurance (ESI)</a></h4>
+            <h4><a href=""> ESi and PF </a></h4>
+            <p> the Employees Provident Fund (EPF) <br> Employees state insurance (ESI) </p>
           </div>
         </div>
         
